--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,48 @@
             </dependencies>
         </profile>
 
+        <profile>
+            <id>elasticsearch-support</id>
+            <dependencies>
+                <dependency>
+                    <groupId>org.elasticsearch</groupId>
+                    <artifactId>elasticsearch-hadoop</artifactId>
+                    <version>2.3.1</version>
+                    <exclusions>
+                        <exclusion>
+                            <groupId>cascading</groupId>
+                            <artifactId>cascading-core</artifactId>
+                        </exclusion>
+                        <exclusion>
+                            <groupId>cascading</groupId>
+                            <artifactId>cascading-local</artifactId>
+                        </exclusion>
+                        <exclusion>
+                            <groupId>org.apache.pig</groupId>
+                            <artifactId>pig</artifactId>
+                        </exclusion>
+                        <exclusion>
+                            <groupId>cascading</groupId>
+                            <artifactId>cascading-hadoop</artifactId>
+                        </exclusion>
+                        <exclusion>
+                            <groupId>org.apache.storm</groupId>
+                            <artifactId>storm-core</artifactId>
+                        </exclusion>
+                        <exclusion>
+                            <groupId>org.apache.hive</groupId>
+                            <artifactId>hive-service</artifactId>
+                        </exclusion>
+                    </exclusions>
+                </dependency>
+                <dependency>
+                    <groupId>org.elasticsearch</groupId>
+                    <artifactId>elasticsearch-spark_2.10</artifactId>
+                    <version>2.3.1</version>
+                </dependency>
+            </dependencies>
+        </profile>
+
     </profiles>
     <dependencies>
         <dependency>
