--- a/pom.xml
+++ b/pom.xml
@@ -98,43 +98,6 @@
             </dependencies>
         </profile>
 
-        <profile>
-            <id>elasticsearch-support</id>
-            <dependencies>
-                <dependency>
-                    <groupId>org.elasticsearch</groupId>
-                    <artifactId>elasticsearch-spark_2.10</artifactId>
-                    <version>2.3.1</version>
-                    <exclusions>
-                        <exclusion>
-                            <groupId>cascading</groupId>
-                            <artifactId>cascading-core</artifactId>
-                        </exclusion>
-                        <exclusion>
-                            <groupId>cascading</groupId>
-                            <artifactId>cascading-local</artifactId>
-                        </exclusion>
-                        <exclusion>
-                            <groupId>org.apache.pig</groupId>
-                            <artifactId>pig</artifactId>
-                        </exclusion>
-                        <exclusion>
-                            <groupId>cascading</groupId>
-                            <artifactId>cascading-hadoop</artifactId>
-                        </exclusion>
-                        <exclusion>
-                            <groupId>org.apache.storm</groupId>
-                            <artifactId>storm-core</artifactId>
-                        </exclusion>
-                        <exclusion>
-                            <groupId>org.apache.hive</groupId>
-                            <artifactId>hive-service</artifactId>
-                        </exclusion>
-                    </exclusions>
-                </dependency>
-            </dependencies>
-        </profile>
-
     </profiles>
     <dependencies>
         <dependency>
@@ -237,7 +200,38 @@
             <artifactId>spark-streaming-kafka_2.10</artifactId>
             <version>${spark.version}</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.elasticsearch</groupId>
+            <artifactId>elasticsearch-spark_2.10</artifactId>
+            <version>2.3.1</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>cascading</groupId>
+                    <artifactId>cascading-core</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>cascading</groupId>
+                    <artifactId>cascading-local</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.apache.pig</groupId>
+                    <artifactId>pig</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>cascading</groupId>
+                    <artifactId>cascading-hadoop</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.apache.storm</groupId>
+                    <artifactId>storm-core</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.apache.hive</groupId>
+                    <artifactId>hive-service</artifactId>
+                </exclusion>
+            </exclusions>
+            <scope>provided</scope>
+        </dependency>
 
     </dependencies>
     <build>
