--- a/pom.xml
+++ b/pom.xml
@@ -116,6 +116,11 @@
             <version>1.5.1</version>
         </dependency>
         <dependency>
+            <groupId>net.liftweb</groupId>
+            <artifactId>lift-json_2.10</artifactId>
+            <version>2.6.2</version>
+        </dependency>
+        <dependency>
             <groupId>net.csdn</groupId>
             <artifactId>ServiceFramework</artifactId>
             <version>1.3.0-SNAPSHOT</version>
