--- a/pom.xml
+++ b/pom.xml
@@ -206,11 +206,11 @@
             <version>${spark.version}</version>
         </dependency>
 
-        <dependency>
-            <groupId>org.carbondata</groupId>
-            <artifactId>carbon-hadoop</artifactId>
-            <version>0.1.0-SNAPSHOT</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>org.carbondata</groupId>-->
+            <!--<artifactId>carbon-hadoop</artifactId>-->
+            <!--<version>0.1.0-SNAPSHOT</version>-->
+        <!--</dependency>-->
 
         <dependency>
             <groupId>org.elasticsearch</groupId>
@@ -242,7 +242,7 @@
                     <artifactId>hive-service</artifactId>
                 </exclusion>
             </exclusions>
-            <scope>provided</scope>
+            <!--<scope>provided</scope>-->
         </dependency>
 
     </dependencies>
