FlatJSONCompositor can flat json

--- a/pom.xml
+++ b/pom.xml
@@ -245,6 +245,12 @@
             <!--<scope>provided</scope>-->
         </dependency>
 
+        <dependency>
+            <groupId>com.jayway.jsonpath</groupId>
+            <artifactId>json-path</artifactId>
+            <version>2.2.0</version>
+        </dependency>
+
     </dependencies>
     <build>
 
