--- a/src/main/resources-debug/application.yml
+++ b/src/main/resources-debug/application.yml
@@ -34,7 +34,7 @@ serviceframework:
     template:
         loader:
              classpath:
-                  enable: true
+                  enable: false
     static:
         loader:
              classpath:
