rest DefaultSource can configure retry times

--- a/src/main/resources-debug/strategy.v2.json.example
+++ b/src/main/resources-debug/strategy.v2.json.example
@@ -70,7 +70,7 @@
         ]
       },
       {
-        "name": "streaming.core.compositor.spark.transformation.JSONTableCompositor",
+        "name": "streaming.core.compositor.spark.transformation.JSONRefTableCompositor",
         "params": [
           {
             "tableName": "testJoinTable"
