--- a/.gitignore
+++ b/.gitignore
@@ -114,3 +114,4 @@ project/plugins/project/
 /src/main/resources-dev/yarn-site.xml
 /src/main/resources-dev/mapred-site.xml
 /src/main/resources-dev/strategy.v2.json
+/lib/
