--- a/pom.xml
+++ b/pom.xml
@@ -201,6 +201,15 @@
 
     </profiles>
     <dependencies>
+
+        <dependency>
+            <groupId>org.ansj</groupId>
+            <artifactId>ansj_seg</artifactId>
+            <version>5.0</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/lib/ansj_seg-5.0.0-all-in-one.jar</systemPath>
+        </dependency>
+
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>fluent-hc</artifactId>
