--- a/pom.xml
+++ b/pom.xml
@@ -17,9 +17,9 @@
 
         <profile>
             <id>spark-1.5.1</id>
-            <!-- default -->
             <properties>
                 <spark.version>1.5.1</spark.version>
+                <spark.streaming.kafka.artifactId>spark-streaming-kafka_2.10</spark.streaming.kafka.artifactId>
             </properties>
         </profile>
 
@@ -28,14 +28,15 @@
             <!-- default -->
             <properties>
                 <spark.version>1.6.1</spark.version>
+                <spark.streaming.kafka.artifactId>spark-streaming-kafka_2.10</spark.streaming.kafka.artifactId>
             </properties>
         </profile>
 
         <profile>
             <id>spark-2.0.0</id>
-            <!-- default -->
             <properties>
                 <spark.version>2.0.0</spark.version>
+                <spark.streaming.kafka.artifactId>spark-streaming-kafka-0-8_2.10</spark.streaming.kafka.artifactId>
             </properties>
         </profile>
 
@@ -65,7 +66,7 @@
                 </dependency>
                 <dependency>
                     <groupId>org.apache.spark</groupId>
-                    <artifactId>spark-streaming-kafka_2.10</artifactId>
+                    <artifactId>${spark.streaming.kafka.artifactId}</artifactId>
                     <version>${spark.version}</version>
                     <scope>provided</scope>
                 </dependency>
@@ -121,7 +122,7 @@
                 </dependency>
                 <dependency>
                     <groupId>org.apache.spark</groupId>
-                    <artifactId>spark-streaming-kafka_2.10</artifactId>
+                    <artifactId>${spark.streaming.kafka.artifactId}</artifactId>
                     <version>${spark.version}</version>
                     <scope>provided</scope>
                 </dependency>
@@ -152,7 +153,7 @@
 
                 <dependency>
                     <groupId>org.apache.spark</groupId>
-                    <artifactId>spark-streaming-kafka_2.10</artifactId>
+                    <artifactId>${spark.streaming.kafka.artifactId}</artifactId>
                     <version>${spark.version}</version>
                 </dependency>
                 <dependency>
@@ -241,6 +242,12 @@
             <groupId>org.joda</groupId>
             <artifactId>joda-convert</artifactId>
             <version>1.8.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.scala-lang</groupId>
+            <artifactId>scala-compiler</artifactId>
+            <version>2.10.3</version>
         </dependency>
 
         <dependency>
