spark.streaming.kafka.artifactId/serviceframework.version default value

--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
         <scala.version>2.10.3</scala.version>
         <scala.2.version>2.10</scala.2.version>
         <spark.version>1.6.1</spark.version>
+        <spark.streaming.kafka.artifactId>spark-streaming-kafka_2.10</spark.streaming.kafka.artifactId>
     </properties>
 
     <profiles>
