1、可以设置结果类型 2、结果类型支持html、json、csv三种模式

--- a/src/main/resources-debug/application.yml
+++ b/src/main/resources-debug/application.yml
@@ -16,8 +16,6 @@ test:
            disable: true
         mongodb:
            disable: true
-master:
-    host: allwefantasy
 
 application:
     controllerNames: streaming.rest.RestController
@@ -34,7 +32,7 @@ serviceframework:
     template:
         loader:
              classpath:
-                  enable: false
+                  enable: true
     static:
         loader:
              classpath:
