--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>streaming.king</groupId>
     <artifactId>streamingpro</artifactId>
-    <version>0.4.1-SNAPSHOT-${mode}-${spark.version}</version>
+    <version>0.3.9-SNAPSHOT-${mode}-${spark.version}</version>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -158,6 +158,7 @@
         </profile>
         <profile>
             <id>debug</id>
+
             <properties>
                 <mode>debug</mode>
             </properties>
@@ -241,6 +242,12 @@
         <!--</dependency>-->
 
         <dependency>
+            <groupId>net.csdn</groupId>
+            <artifactId>csdn-common</artifactId>
+            <version>1.5-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>fluent-hc</artifactId>
             <version>4.3.2</version>
@@ -271,7 +278,9 @@
             <groupId>net.csdn</groupId>
             <artifactId>ServiceFramework</artifactId>
             <version>1.3.2-SNAPSHOT-9.2.16</version>
+
             <exclusions>
+
                 <exclusion>
                     <groupId>org.slf4j</groupId>
                     <artifactId>slf4j-api</artifactId>
@@ -288,6 +297,7 @@
                     <groupId>org.slf4j</groupId>
                     <artifactId>jcl-over-slf4j</artifactId>
                 </exclusion>
+
                 <!--<exclusion>-->
                 <!--<groupId>org.eclipse.jetty</groupId>-->
                 <!--<artifactId>jetty-server</artifactId>-->
@@ -313,6 +323,9 @@
                 <!--<artifactId>jetty-continuation</artifactId>-->
                 <!--</exclusion>-->
                 <!--mongo相关-->
+
+
+
                 <exclusion>
                     <groupId>net.csdn</groupId>
                     <artifactId>MongoMongo</artifactId>
@@ -550,29 +563,7 @@
                 </configuration>
 
             </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-shade-plugin</artifactId>
-                <version>2.4.3</version>
-                <executions>
-                    <execution>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>shade</goal>
-                        </goals>
-                        <configuration>
-                            <artifactSet>
-                                <excludes>
-                                    <exclude>junit:junit</exclude>
-                                    <exclude>jmock:*</exclude>
-                                    <exclude>*:xml-apis</exclude>
-                                    <exclude>org.apache.maven:lib:tests</exclude>
-                                </excludes>
-                            </artifactSet>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
+
 
             <!--   要将源码放上去，需要加入这个插件    -->
             <plugin>
@@ -605,9 +596,33 @@
                 </configuration>
             </plugin>
 
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-shade-plugin</artifactId>
+                <version>2.4.3</version>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>shade</goal>
+                        </goals>
+                        <configuration>
+                            <artifactSet>
+                                <excludes>
+                                    <exclude>junit:junit</exclude>
+                                    <exclude>jmock:*</exclude>
+                                    <exclude>*:xml-apis</exclude>
+                                    <exclude>org.apache.maven:lib:tests</exclude>
+                                </excludes>
+                            </artifactSet>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
 
         </plugins>
     </build>
+
 
 
 </project>
