--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>streaming.king</groupId>
     <artifactId>streamingpro</artifactId>
-    <version>0.4.1-SNAPSHOT-${mode}-${spark.version}</version>
+    <version>0.4.6-SNAPSHOT-${mode}-${spark.version}</version>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -27,29 +27,22 @@
     <profiles>
 
         <profile>
-            <id>spark-1.5.1</id>
-            <properties>
-                <spark.version>1.5.1</spark.version>
-                <spark.streaming.kafka.artifactId>spark-streaming-kafka_2.10</spark.streaming.kafka.artifactId>
-                <serviceframework.version>1.3.0-SNAPSHOT</serviceframework.version>
-            </properties>
-        </profile>
-
-        <profile>
             <id>spark-1.6.1</id>
             <!-- default -->
             <properties>
                 <spark.version>1.6.1</spark.version>
                 <spark.streaming.kafka.artifactId>spark-streaming-kafka_2.10</spark.streaming.kafka.artifactId>
+                <spark.sql.kafka.artifactId>spark-streaming-kafka_2.10</spark.sql.kafka.artifactId>
                 <serviceframework.version>1.3.0-SNAPSHOT</serviceframework.version>
             </properties>
         </profile>
 
         <profile>
-            <id>spark-2.0.0</id>
+            <id>spark-2.0.2</id>
             <properties>
-                <spark.version>2.0.0</spark.version>
+                <spark.version>2.0.2</spark.version>
                 <spark.streaming.kafka.artifactId>spark-streaming-kafka-0-8_2.10</spark.streaming.kafka.artifactId>
+                <spark.sql.kafka.artifactId>spark-sql-kafka-0-10_2.10</spark.sql.kafka.artifactId>
                 <serviceframework.version>1.3.2-SNAPSHOT-9.2.16</serviceframework.version>
             </properties>
         </profile>
@@ -83,6 +76,13 @@
                     <artifactId>${spark.streaming.kafka.artifactId}</artifactId>
                     <version>${spark.version}</version>
                 </dependency>
+
+                <dependency>
+                    <groupId>org.apache.spark</groupId>
+                    <artifactId>${spark.sql.kafka.artifactId}</artifactId>
+                    <version>${spark.version}</version>
+                </dependency>
+
                 <dependency>
                     <groupId>org.apache.spark</groupId>
                     <artifactId>spark-core_2.10</artifactId>
@@ -140,6 +140,11 @@
                 </dependency>
                 <dependency>
                     <groupId>org.apache.spark</groupId>
+                    <artifactId>${spark.sql.kafka.artifactId}</artifactId>
+                    <version>${spark.version}</version>
+                </dependency>
+                <dependency>
+                    <groupId>org.apache.spark</groupId>
                     <artifactId>spark-sql_2.10</artifactId>
                     <version>${spark.version}</version>
                     <scope>provided</scope>
@@ -166,6 +171,11 @@
                 <dependency>
                     <groupId>org.apache.spark</groupId>
                     <artifactId>${spark.streaming.kafka.artifactId}</artifactId>
+                    <version>${spark.version}</version>
+                </dependency>
+                <dependency>
+                    <groupId>org.apache.spark</groupId>
+                    <artifactId>${spark.sql.kafka.artifactId}</artifactId>
                     <version>${spark.version}</version>
                 </dependency>
                 <dependency>
@@ -587,5 +597,15 @@
         </plugins>
     </build>
 
-
+    <distributionManagement>
+        <repository>
+            <id>releases</id>
+            <name>releases</name>
+            <url>http://mvn.letv.com/nexus/content/repositories/releases/</url>
+        </repository>
+        <snapshotRepository>
+            <id>snapshots</id>
+            <url>http://mvn.letv.com/nexus/content/repositories/snapshots</url>
+        </snapshotRepository>
+    </distributionManagement>
 </project>
