--- a/pom.xml
+++ b/pom.xml
@@ -4,14 +4,15 @@
 
     <groupId>streaming.king</groupId>
     <artifactId>streamingpro</artifactId>
-    <version>0.4.6-SNAPSHOT-${mode}-${spark.version}</version>
+    <version>0.4.7-SNAPSHOT-${mode}-${spark.version}</version>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <scala.version>2.10.3</scala.version>
         <scala.2.version>2.10</scala.2.version>
         <spark.version>1.6.1</spark.version>
-        <streamingpro.version>0.4.6</streamingpro.version>
+        <spark.sql.kafka.artifactId>spark-streaming-kafka_2.10</spark.sql.kafka.artifactId>
+        <streamingpro.version>0.4.7</streamingpro.version>
         <spark.streaming.kafka.artifactId>spark-streaming-kafka_2.10</spark.streaming.kafka.artifactId>
         <serviceframework.version>1.3.0-SNAPSHOT</serviceframework.version>
     </properties>
@@ -84,6 +85,7 @@
                     <groupId>org.apache.spark</groupId>
                     <artifactId>${spark.sql.kafka.artifactId}</artifactId>
                     <version>${spark.version}</version>
+                    <scope>provided</scope>
                 </dependency>
 
                 <dependency>
@@ -145,6 +147,7 @@
                     <groupId>org.apache.spark</groupId>
                     <artifactId>${spark.sql.kafka.artifactId}</artifactId>
                     <version>${spark.version}</version>
+                    <scope>provided</scope>
                 </dependency>
                 <dependency>
                     <groupId>org.apache.spark</groupId>
@@ -214,6 +217,17 @@
 
             </dependencies>
         </profile>
+        <profile>
+            <id>structured-streaming</id>
+            <dependencies>
+                <dependency>
+                    <groupId>streamingpro.king</groupId>
+                    <artifactId>${structured.streaming.artifacteId}</artifactId>
+                    <version>${streamingpro.version}-SNAPSHOT-online-2.0.2</version>
+                </dependency>
+            </dependencies>
+        </profile>
+
         <profile>
             <id>build-distr</id>
             <build>
@@ -465,11 +479,7 @@
             </exclusions>
         </dependency>
 
-        <dependency>
-            <groupId>streamingpro.king</groupId>
-            <artifactId>${structured.streaming.artifacteId}</artifactId>
-            <version>${streamingpro.version}-SNAPSHOT-online-2.0.2</version>
-        </dependency>
+
 
         <dependency>
             <groupId>org.scalactic</groupId>
@@ -605,6 +615,5 @@
 
         </plugins>
     </build>
-
 
 </project>
